--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ask-sdk-core": "^2.14.0",
     "axios": "^1.13.2",
     "body-parser": "^2.2.0",
+    "ejs": "^3.1.10",
     "express": "^5.1.0"
   }
 }
